# inga-quants

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml  scoring.yaml  signals_mid.yaml  signals_short.yaml
docs/: PRODUCTION.md  spec_phase2.md
scripts/: run_daily.sh
scripts/systemd/: inga-quant-daily.service  inga-quant-daily.timer
shutdown/deploy/: inga-deploy-shutdown  inga-prod-apply  inga-prod-bootstrap  inga-prod-status  inga-sudoers-deploy  inga-sudoers-prod  prod-allowlist.conf  prod-denylist.conf
shutdown/systemd/inga-weekly-digest.service.d/: skip-wrapper.conf
shutdown/tools/: jq_api_smoketest.py  notify_digest.py
src/inga_quant/: cli.py
src/inga_quant/features/: build_features.py
src/inga_quant/pipeline/: gates.py  ingest.py  model.py  notify.py  output.py  runner.py  trade_date.py  watchlist.py
src/inga_quant/ui/: __init__.py  i18n.py
src/inga_quant/utils/: cache.py  config.py  hash.py  io.py
src/inga_quants/: cli.py
src/inga_quants.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_cli_build_features.py  test_cli_lock.py  test_demo_e2e.py  test_env_autoload.py  test_features_schema.py  test_features_values.py  test_gates.py  test_ingest.py  test_jq_smoketest.py  test_noninteractive.py  test_production_profile.py  test_prune_cache.py  test_runner.py  test_shutdown_scripts.py  test_smoke.py  test_trade_date.py  test_watchlist.py
tests/fixtures/: bars_small.parquet
